# ll_trading_strategy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  strategy_management_incremental.patch
docs/superpowers/plans/: 2026-07-23-src-layer-refactor.md  2026-07-23-tab2-technical-chart.md
docs/superpowers/specs/: 2026-07-23-src-layer-refactor-design.md  2026-07-23-tab2-technical-chart-design.md
src/common/: __init__.py  backtest_models.py  config.py  constants.py  exceptions.py  models.py  strategy_models.py  validators.py
src/infra/: __init__.py
src/service/: __init__.py  backtest_engine.py  backtest_service.py  market_data_service.py  ports.py  position_sizing_service.py  strategy_indicator_engine.py  strategy_management_service.py  strategy_rule_evaluator.py  strategy_validator.py  technical_analysis_service.py  technical_indicator_service.py
src/ui/: app_builder.py
tests/common/: test_validators.py
tests/infra/: test_backtest_chart_builder.py  test_csv_repository.py  test_efinance_gateway.py  test_plotly_chart_builder.py  test_strategy_json_repository.py
tests/service/: test_backtest_engine.py  test_backtest_service.py  test_market_data_service.py  test_position_sizing_service.py  test_strategy_management_service.py  test_strategy_rule_evaluator.py  test_strategy_validator.py  test_technical_analysis_service.py  test_technical_indicator_service.py
tests/ui/: test_tab1_data_fetch.py  test_tab2_technical_chart.py  test_tab3_strategy_management.py  test_tab4_backtest.py
(+11 files in other folders)
